@@ -41,11 +41,4 @@
 
 - More efficient totient segment.  Do we really need primes to n/2?
 
-- Add a more complex system for allowing something like:
-      FOREACH_PRIME(low, high) {
-        ....
-      } END_FOREACH_PRIME
-  that (1) handles any low / high, and (2) segments.  Take segment_primes
-  from XS.xs to do this.
-
 - Implement S2 calculation for LMO prime count.
